--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@types/node": "^12.12.0",
     "@types/webpack": "^4.4.22",
     "acorn": "^5.2.1",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-istanbul": "^5.1.0",
@@ -94,11 +94,13 @@
     "de-indent": "^1.0.2",
     "es6-promise": "^4.1.0",
     "escodegen": "^1.8.1",
-    "eslint": "^5.7.0",
-    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-jasmine": "^2.8.4",
     "file-loader": "^3.0.1",
     "flow-bin": "^0.61.0",
+    "flowtype": "^2.0.0",
     "hash-sum": "^1.0.2",
     "he": "^1.1.1",
     "http-server": "^0.11.1",
